add explainer images for pagerank and community detection

--- a/network-of-thrones.ipynb
+++ b/network-of-thrones.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -21,6 +21,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting py2neo\n",
+      "  Downloading py2neo-3.1.0-py2.py3-none-any.whl (140kB)\n",
+      "\u001b[K    100% |████████████████████████████████| 143kB 3.0MB/s \n",
+      "\u001b[?25hInstalling collected packages: py2neo\n",
+      "  Found existing installation: py2neo 2.0.8\n",
+      "    Uninstalling py2neo-2.0.8:\n",
+      "      Successfully uninstalled py2neo-2.0.8\n",
+      "Successfully installed py2neo-3.1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install py2neo --upgrade"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -29,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -58,9 +84,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -94,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -121,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -130,7 +156,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('min': 1, 'max': 24, 'avg_characters': 4.957746478873241, 'stdev': 6.227672391875085)\n"
+      "('min': 1, 'max': 24, 'avg_characters': 4.957746478873239, 'stdev': 6.227672391875085)\n"
      ]
     }
    ],
@@ -499,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -507,10 +533,10 @@
     {
      "data": {
       "text/plain": [
-       "<igraph.Graph at 0x1107878b8>"
+       "<igraph.Graph at 0x10bbfd318>"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,12 +559,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### PageRank"
+    "### PageRank\n",
+    "\n",
+    "![](http://www.lyonwj.com/public/img/page-rank.png)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -547,16 +576,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'pg': 0.007328980991947573, 'name': 'Aemon'}, {'pg': 0.02161972592380346, 'name': 'Samwell'}, {'pg': 0.0065125330245105004, 'name': 'Grenn'}, {'pg': 0.005477506014302078, 'name': 'Aerys'}, {'pg': 0.02570016262642541, 'name': 'Tywin'}]\n"
+      "[{'pg': 0.007328980991947573, 'name': 'Aemon'}, {'pg': 0.02161972592380347, 'name': 'Samwell'}, {'pg': 0.006512533024510501, 'name': 'Grenn'}, {'pg': 0.005477506014302076, 'name': 'Aerys'}, {'pg': 0.022292016521362853, 'name': 'Robert'}]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<py2neo.database.Cursor at 0x1118e60b8>"
+       "<py2neo.database.Cursor at 0x10b640780>"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +642,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Community detection"
+    "### Community detection\n",
+    "\n",
+    "![](http://www.lyonwj.com/public/img/community-1.png)"
    ]
   },
   {
